--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -31,9 +31,11 @@ html, body, .main, .main>.row {
 
 #local-container {
     width: 100%;
+    text-align: center;
 }
 #local-container video {
     max-width: 100%;
+    max-height: 80px;
 }
 .dashboard {
     background-color: #eee;
